--- a/crates/sui-graphql-rpc/Cargo.toml
+++ b/crates/sui-graphql-rpc/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 anyhow.workspace = true
 async-graphql = {workspace = true, features = ["dataloader", "apollo_tracing", "tracing", "opentelemetry"] }
 async-graphql-axum.workspace = true
+async-graphql-value.workspace = true
 async-trait.workspace = true
 axum.workspace = true
 chrono.workspace = true
