--- a/crates/sui-bridge/Cargo.toml
+++ b/crates/sui-bridge/Cargo.toml
@@ -52,3 +52,8 @@ sui-types = { workspace = true, features = ["test-utils"] }
 sui-json-rpc-types = { workspace = true, features = ["test-utils"] }
 sui-config.workspace = true
 hex-literal = "0.3.4"
+
+
+[[bin]]
+name = "sui-bridge-cli"
+path = "src/tools/main.rs"
