[mysten-service] add logging utility

--- a/crates/mysten-service/Cargo.toml
+++ b/crates/mysten-service/Cargo.toml
@@ -14,6 +14,8 @@ serde.workspace = true
 workspace-hack.workspace = true
 prometheus.workspace = true
 mysten-metrics.workspace = true
+telemetry-subscribers.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 tower.workspace = true
